--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -19,6 +19,7 @@ html, body { height: 100%; }
 /* Fin Resest estilos */
 
 b { font-weight: bold; }
+h1, h2, h3, h4, h5, h6, b { font-weight: bold; }
 
 /* Contenido */
 section .buttons input[type="submit"], section .buttons input[type="button"] { border: 1px solid; padding: 10px 15px; text-shadow: 1px 1px 1px rgba(0,0,0,0.4); }
@@ -122,7 +123,7 @@ a.back { float: right; }
 /* Inicio popup */
 #lightbox.lightbox { display: none; left: -999em; opacity: 0; position: absolute; }
 /* Contenido lightbox */
-#lightbox.in .content, #lightbox.out .content { background: #fff; border-radius: 8px; left: 5%; position: absolute; width: 90%; z-index: 99; }
+#lightbox.in .content, #lightbox.out .content { background: #fff; border-radius: 8px; left: 5%; padding: 10px; position: absolute; width: 90%; z-index: 99; }
     #lightbox.in .content > div, #lightbox.out .content > div { padding: 5px 20px 20px; }
 #lightbox.in .bg, #lightbox.out .bg { background: rgba(0, 0, 0, 0.8); bottom: 0; cursor: pointer; height: 100%; left: 0; position: fixed; right: 0; top: 0; z-index: 1; }
 /* Botón cerrar lightbox */
