--- a/assets/css/sinquehacer.css
+++ b/assets/css/sinquehacer.css
@@ -19,4 +19,4 @@ section { padding: 40px; min-height: 600px; width: 100%; }
     /* Header de la página */
     section h1 { font-size: 2em; padding: 10px 0; text-align: center; }
         section h1 i { display: inline-block !important; margin-right: 10px; }
-    section p { -webkit-column-count: 3; margin: 0 40px 40px; text-align: justify; }
+    section p, section h2 { margin: 0 auto 40px; text-align: justify; width: 80%; }
