--- a/assets/css/sinquehacer.css
+++ b/assets/css/sinquehacer.css
@@ -3,7 +3,7 @@
 @import url("page/page-black.css");
 
 /* Menú Izquierdo */
-header { position: fixed; width: 100%; z-index: 2; }
+body > header { position: fixed; width: 100%; z-index: 2; }
 #menu { padding-left: 80px; }
     #menu ul { list-style: none; text-align: center; }
         #menu ul li { display: inline-block; cursor: pointer; height: 40px; padding: 0 10px; vertical-align: top; width: auto; }
@@ -17,6 +17,6 @@ section { z-index: 1; overflow: hidden; }
     section > .content { padding: 40px; min-height: 600px; width: 100%; }
 section { padding: 40px; min-height: 600px; width: 100%; }
     /* Header de la página */
-    section h1 { font-size: 2em; padding: 10px 0; text-align: center; }
-        section h1 i { display: inline-block !important; margin-right: 10px; }
-    section p, section h2 { margin: 0 auto 40px; text-align: justify; width: 80%; }
+    section article header h1 { font-size: 2em; padding: 10px 0; text-align: center; }
+        section article header h1 i { display: inline-block !important; margin-right: 10px; }
+    section article p, section h2 { margin: 0 auto 40px; text-align: justify; width: 80%; }
