--- a/assets/css/page/page-black.css
+++ b/assets/css/page/page-black.css
@@ -26,8 +26,12 @@ body #content > section:nth-child(5n+3) { background-color: rgb(226,114,50); }
     body #content > section:nth-child(5n+3) p { color: #fdc8a8; }
 
 body #content > section:nth-child(5n+4) { background-color: #f1f2f4; }
-    body #content > section:nth-child(5n+4), body > section:nth-child(5n+4) mark a { color: #36393c; text-decoration: none;  }
+    body #content > section:nth-child(5n+4), body > section:nth-child(5n+4) a { color: #36393c; text-decoration: none;  }
     body #content > section:nth-child(5n+4) p { color: #858a8f; }
+
+#statics { background-color: #f1f2f4 !important; color: #36393c !important; }
+    #statics p > a { color: #36393c; text-decoration: none;  }
+    #statics p { color: #858a8f !important; }
 
 body #content > section:nth-child(5n+5) { background-color: #5ec369; }
     body #content > section:nth-child(5n+5) p { color: #363e45; }
