--- a/assets/css/sinquehacer.css
+++ b/assets/css/sinquehacer.css
@@ -22,3 +22,6 @@ section { padding: 40px; min-height: 600px; width: 100%; }
     section article header h1 { font-size: 2em; padding: 10px 0; text-align: center; }
         section article header h1 i { display: inline-block !important; margin-right: 10px; }
     section article p, section h2 { margin: 0 auto 40px; text-align: justify; width: 80%; }
+
+
+ iframe {border: 1px; display: block; height: 180px; margin: 0 auto; width: 400px;}
