--- a/views/header.html
+++ b/views/header.html
@@ -1,1 +1,1 @@
-<nav class="menu" id="menu"><ul><li class="active"><a data-controller="JMain">JMain</a></li><li><a data-controller="JSpinner">JSpinner</a></li><li><a data-controller="JTools">JTools</a></li></ul></nav>
+<nav class="menu" id="menu"><ul><li class="menu"><a href="javascript:void(0)"><i class="fa fa-bars"></i> Menú</a></li><li class="active"><a data-controller="JMain">JMain</a></li><li><a data-controller="JSpinner">JSpinner</a></li><li><a data-controller="JTools">JTools</a></li></ul></nav><div id="blocker"></div>
